--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -42,7 +42,95 @@ body{
     text-shadow: 0 0 8px rgb(14, 215, 241);
 }
 
+.lathin_text{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
 .h_fit{
     height: fit-content;
 }
+
+.back_cold{
+    background: url(/assets/images/weather/cold.jpg);
+}
+
+.back_warm{
+    background: url(/assets/images/weather/warm.jpg);
+}
+
+.back_usual{
+    background: url(/assets/images/weather/usual.jpg);
+}
+
+@media(max-width:600px){
+    .back_cold{
+        background: url(/assets/images/weather/cold-mini.jpg);
+    }    
+    .back_warm{
+        background: url(/assets/images/weather/warm-mini.jpg);
+    }    
+    .back_usual{
+        background: url(/assets/images/weather/usual-mini.jpg);
+    }
+}
+
+.app{
+    width: 100%;
+    height: 100vh;
+    background-position: center;
+    background-size: cover;
+}
+
+.temprature_box{
+    direction: ltr;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient( 90deg, rgba(195, 224, 209, 0.4), rgba(0, 209, 255, 0.4) );
+    box-shadow: 0 8px 32px 0 rgb(31 38 135 / 37%);
+    backdrop-filter: blur(2px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    cursor: pointer;
+    transition: all 200ms linear;
+    text-shadow: 0 0 2px black;
+    font-size: 4rem;
+}
+
+.temprature_box span{
+    position: relative;
+    top: -9px;
+    font-size: 5rem;
+}
+
+.search_input{
+    background: transparent;
+    border: transparent;
+    outline: unset;
+    text-align: center;
+    font-size: 2rem;
+    border-radius: 0.5rem;
+    box-shadow: 0px 2px 0px #808080a6;
+    padding: 0.5rem;
+}
+
+.back_cold .text_color ,
+.back_cold .placeholder_color::placeholder{
+    color: #ffffff;
+    text-shadow: 0 0 5px black;
+}    
+.back_warm .text_color ,
+.back_warm .placeholder_color::placeholder{
+    color: #eed284;
+    text-shadow: 0 0 5px black;
+}    
+.back_usual .text_color ,
+.back_usual .placeholder_color::placeholder{
+    color: #175006;
+    text-shadow: 0 0 5px rgb(146, 136, 136);
+}
+
+
+
 
